--- a/app/src/main/res/layout/fragment_busqueda_agrupacion.xml
+++ b/app/src/main/res/layout/fragment_busqueda_agrupacion.xml
@@ -6,43 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.busqueda.BusquedaAgrupacion">
 
-    <ImageButton
-        android:id="@+id/btnAtras"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="@color/transparente"
-        android:contentDescription="@string/tieNombreAgrupacion"
-        android:minHeight="48dp"
-        android:src="@drawable/ic_action_backarrow"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
-
-    <TextView
-        android:id="@+id/tvBusquedaAgrupaciones"
-        android:layout_width="257dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center|start"
-        android:text="@string/tvBusquedaAgrupaciones"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="@dimen/tilBusquedaWidth"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBusquedaAgrupaciones">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tieNombre"
@@ -59,8 +31,9 @@
         android:layout_width="295dp"
         android:layout_height="42dp"
         android:layout_margin="15dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
