--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -22,7 +22,7 @@
         android:layout_width="358dp"
         android:layout_height="117dp"
         android:layout_marginTop="440dp"
-        android:fontFamily="@font/fuentetitulo"
+        style="@style/Theme.Cascaron.textfont"
         android:gravity="center"
         android:text="@string/app_name"
         android:textSize="48sp"
