--- a/app/src/main/res/layout/fragment_perfil_agrupacion.xml
+++ b/app/src/main/res/layout/fragment_perfil_agrupacion.xml
@@ -63,7 +63,7 @@
         android:layout_height="72dp"
         android:layout_marginStart="92dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/fuentetitulo"
+        style="@style/Theme.Cascaron.textfont"
         android:text="@string/tvNombreAgrupacion"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
