--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tilBusquedaWidth">300dp</dimen>
+    <dimen name="margintop_subidaevento">30dp</dimen>
 </resources>
