--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tilBusquedaWidth">300dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="top_add_agrupacion">100dp</dimen>
 </resources>
